--- a/style.css
+++ b/style.css
@@ -37,14 +37,14 @@ a {
 }
 
 .GORGU1{display: flex;
-flex-direction: column;}
-
+  flex-direction: column;}
+  
 .GORGU2{display: flex;
-flex-direction: column;}
-
+  flex-direction: column;}
+  
 .GORGU3{display: flex;
-flex-direction: column;}
-
+  flex-direction: column;}
+  
 .links2{display: flex;
 flex-direction: column;
 align-items: center;}
@@ -53,6 +53,8 @@ h1 {
 }
 
 h1{color: rgb(181, 255, 10);}
+
+
 
 /* computer */
 @media screen and (min-width: 600px) {
@@ -65,14 +67,9 @@ h1{color: rgb(181, 255, 10);}
 flex-direction: row;
 justify-content: space-around;}
 
-.GORGU1{display: flex;
-justify-content: center;}
-
-.GORGU2{display: flex;
-justify-content: center;}
-
-.GORGU3{display: flex;
-justify-content: center;}
+.GORGU1,.GORGU2,.GORGU3{display: flex;
+justify-content: center;
+flex-direction: row;}
 
 .links2{display: flex;
 flex-direction: row;
