--- a/style.css
+++ b/style.css
@@ -36,16 +36,8 @@ a {
   color: whitesmoke;
 }
 
-.GORGU1{display: flex;
-  flex-direction: column;}
   
-.GORGU2{display: flex;
-  flex-direction: column;}
-  
-.GORGU3{display: flex;
-  flex-direction: column;}
-  
-.links2{display: flex;
+.click{display: flex;
 flex-direction: column;
 align-items: center;}
 
@@ -54,8 +46,10 @@ h1 {
 }
 
 h1{color: rgb(181, 255, 10);}
+h1{display: flex;
+justify-content: center;}
 
-
+a:hover{color:rgb(181, 255, 10) ;}
 
 /* computer */
 @media screen and (min-width: 600px) {
@@ -68,6 +62,6 @@ h1{color: rgb(181, 255, 10);}
 flex-direction: row;
 justify-content: space-around;}
 
-.GORGU1,.GORGU2,.GORGU3{justify-content: center;flex-direction: row;}
 
-.links2{display: flex; justify-content: space-between; flex-direction: row;}
+
+.click{display: flex; justify-content: space-between; flex-direction: row;}
