--- a/style.css
+++ b/style.css
@@ -28,18 +28,12 @@ flex-direction: column;}
 .YODA3{display: flex;
 flex-direction: column;}
 
-.links{display: flex;
-flex-direction: column;
-align-items: center;
-}
+
 a {
   color: whitesmoke;
 }
 
-  
-.click{display: flex;
-flex-direction: column;
-align-items: center;}
+
 
 h1 {
   font-family: "SF Distant Galaxy";
@@ -48,6 +42,11 @@ h1 {
 h1{color: rgb(181, 255, 10);}
 h1{display: flex;
 justify-content: center;}
+
+.links{display: flex;
+flex-direction: column;
+align-items:center;
+}
 
 a:hover{color:rgb(181, 255, 10) ;}
 
@@ -58,10 +57,8 @@ a:hover{color:rgb(181, 255, 10) ;}
 .YODA1,.YODA2,.YODA3{justify-content: center; flex-direction: row;
 }
 }
-.links{display: flex;
-flex-direction: row;
-justify-content: space-around;}
 
 
 
-.click{display: flex; justify-content: space-between; flex-direction: row;}
+
+.links{display: flex; justify-content: space-between; flex-direction: row;}
