--- a/style.css
+++ b/style.css
@@ -43,10 +43,9 @@ h1{color: rgb(181, 255, 10);}
 h1{display: flex;
 justify-content: center;}
 
-.links{display: flex;
+nav{display: flex;
 flex-direction: column;
-align-items:center;
-}
+align-items:center;}
 
 a:hover{color:rgb(181, 255, 10) ;}
 
@@ -60,5 +59,6 @@ a:hover{color:rgb(181, 255, 10) ;}
 
 
 
-
-.links{display: flex; justify-content: space-between; flex-direction: row;}
+nav{display: flex;
+flex-direction: row;
+justify-content: space-between;}
